tests/macros/float/extension.rs
fn main() {
    let q = discourse::questions![Float { extension: todo!() }];
}
